# alldeb-source

./: .gitignore  AllDebInstaller.pro  CMakeLists.txt  README  README.md  about.cpp  about.h  about.ui  alldeb-inst.desktop  alldeb-installer.desktop  alldeb.xml  alldeb_en.ts  alldeb_id.ts  dialog.cpp  dialog.h  dialog.ui  lisensi.txt  main.cpp
assets/: alldeb-installer.desktop  alldeb_maker_R2.sh
debian/: alldeb-installer.mime  alldeb-installer.sharedmimeinfo  changelog  control  copyright  postinst  postrm  rules
debian/source/: include-binaries
src/: about.cpp  about.h  dialog.cpp  dialog.h  main.cpp
ts/: alldeb_en.ts  alldeb_id.ts
ui/: about.ui  dialog.ui
